#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "A roguelike toolkit plugin for bevy"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/yendor"
license     = "BlueOak-1.0.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike", "grid"]
name       = "yendor"
readme     = "README.md"
repository = "https://github.com/YendorEngine/yendor"
resolver   = "2"
version    = "0.1.0"

# TODO: Check this I'm not sure what all it does
################################
#########       Optimizations
################################
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

#################################
#########       Workspaces
#################################
[workspace]
members = [
    "yendor_pathfinding",
    "yendor_grid",
    "yendor_distance",
    "yendor_random",
    "yendor_fov",
    "yendor_utils",
]

[workspace.dependencies]
yendor_distance    = { path = "yendor_distance" }
yendor_fov         = { path = "yendor_fov" }
yendor_grid        = { path = "yendor_grid" }
yendor_pathfinding = { path = "yendor_pathfinding" }
yendor_random      = { path = "yendor_random" }
yendor_utils       = { path = "yendor_utils" }

#################################
#########       Dependencies
#################################
[dependencies]
yendor_distance    = { workspace = true }
yendor_fov         = { workspace = true }
yendor_grid        = { workspace = true }
yendor_pathfinding = { workspace = true }
yendor_random      = { workspace = true }
yendor_utils       = { workspace = true }

#################################
#########       Features
#################################
[features]
default = ["fov", "pathfinding", "random", "reflect", "serialize"]

debug = []

fov = []

pathfinding = []

random = ["rand"]

reflect = ["yendor_grid/reflect"]

serialize = ["serde", "bitvec/serde", "yendor_grid/serialize", "yendor_pathfinding/serialize"]

######################################
#########       Bevy
######################################
[workspace.dependencies.bevy]
default-features = false
features         = []
version          = "0.9"

######################################
#########       Random
######################################
[dependencies.rand]
optional = true
version  = "0.8"

######################################
#########       Serialize
######################################
[dependencies.serde]
features = ["derive"]
optional = true
version  = "1"

######################################
#########       Utility
######################################
[dependencies.bitvec]
optional = false
version  = "1"
