#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "A roguelike toolkit plugin for bevy"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/yendor"
license     = "BlueOak-1.0.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike", "grid"]
name       = "yendor"
readme     = "README.md"
repository = "https://github.com/YendorEngine/yendor"
resolver   = "2"
version    = "0.1.0"

# TODO: Check this I'm not sure what all it does
################################
#########       Optimizations
################################
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

#################################
#########       Features
#################################
[features]
default = ["fov", "pathfinding", "random", "serialize"]

debug = []

fov = []

pathfinding = []

random = ["rand"]

reflect = []

serialize = ["serde", "bitvec/serde"]

#################################
#########       Dependencies
#################################

######################################
#########       Bevy
######################################
[dependencies.bevy]
default-features = false
features         = []
version          = "0.9"

######################################
#########       Pathfinding
######################################
[dependencies.pathfinding]
version = "4"

######################################
#########       Random
######################################
[dependencies.rand]
optional = true
version  = "0.8"

######################################
#########       Serialize
######################################
[dependencies.serde]
features = ["derive"]
optional = true
version  = "1"

######################################
#########       Utility
######################################
[dependencies.bitvec]
optional = false
version  = "1"
