[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
categories  = ["games"]
description = "A roguelike toolkit plugin for bevy"
edition     = "2021"
exclude     = ["assets/", "tools/", ".github/", "crates/"]
homepage    = "https://github.com/YendorEngine/yendor"
keywords    = ["game", "ascii", "roguelike", "grid"]
license     = "MIT OR Apache-2.0"
name        = "yendor_lib"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/yendor"
version     = "0.1.0"

[workspace]
members  = [".", "crates/*"]
resolver = "2"

[features]
camera_shake = ["dep:yendor_camera_shake"]
roguelike    = ["yendor_rl"]

[workspace.dependencies]
bevy = { version = "0.9", default-features = false, features = [] }
ulid = { version = "1", default-features = false }

[dependencies]
yendor_bevy_utils   = { path = "./crates/yendor_bevy_utils", version = "0.1" }
yendor_camera_shake = { path = "./crates/yendor_camera_shake", optional = true, version = "0.1" }
yendor_rl           = { path = "./crates/yendor_rl", optional = true, version = "0.1" }
