#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "Gemoetry portion of a roguelike toolkit plugin for bevy"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/yendor"
license     = "BlueOak-1.0.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike", "fov", "shadowcasting"]
name       = "yendor_fov"
readme     = "README.md"
repository = "https://github.com/YendorEngine/yendor"
resolver   = "2"
version    = "0.1.0"

[dependencies]
yendor_geometry = { workspace = true }
