#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "Gemoetry portion of a roguelike toolkit plugin for bevy"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/yendor"
license     = "BlueOak-1.0.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike", "geometry"]
name       = "yendor_geometry"
readme     = "README.md"
repository = "https://github.com/YendorEngine/yendor"
resolver   = "2"
version    = "0.1.0"

[features]
serialize = ["serde"]

[dependencies]
bevy = { workspace = true }

[dependencies.serde]
features = ["derive"]
optional = true
version  = "1"
