#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "Gemoetry portion of a roguelike toolkit plugin for bevy"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/yendor"
license     = "BlueOak-1.0.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike", "grid", "3d", "2d"]
name       = "yendor_grid"
readme     = "README.md"
repository = "https://github.com/YendorEngine/yendor"
resolver   = "2"
version    = "0.1.0"

[features]
reflect   = ["yendor_geometry/reflect"]
serialize = ["serde", "bitvec/serde", "yendor_geometry/serialize"]

[dependencies]
yendor_geometry = { workspace = true }

[dependencies.serde]
features = ["derive"]
optional = true
version  = "1"

[dependencies.bitvec]
optional = true
version  = "1"
