[package]
authors    = ["Jacob LeCoq (BigBanana) <lecoqjacob@gmail.com>"]
edition    = "2021"
license    = "MIT OR Apache-2.0"
name       = "yendor_asset"
repository = "https://github.com/YendorEngine/yendor"
version    = "0.1.0"

[dependencies]
atomic_refcell = "0.1"
bevy           = { workspace = true, default-features = true, features = ["bevy_asset"] }
serde          = "1"
ulid           = { workspace = true }

yendor_bevy_utils        = { path = "../yendor_bevy_utils" }
yendor_has_load_progress = { path = "../yendor_has_load_progress", optional = true }
yendor_type_ulid         = { path = "../yendor_type_ulid" }
yendor_utility           = { path = "../yendor_utility" }

[features]
default           = []
has_load_progress = ["dep:yendor_has_load_progress"]
