[package]
authors    = ["Jacob LeCoq (BigBanana) <lecoqjacob@gmail.com>"]
edition    = "2021"
license    = "MIT OR Apache-2.0"
name       = "yendor_asset"
repository = "https://github.com/YendorEngine/yendor"
version    = "0.1.0"

[dependencies]
yendor_bevy_utils = { path = "../yendor_bevy_utils", optional = true }
yendor_type_ulid  = { path = "../yendor_type_ulid" }
yendor_utility    = { path = "../yendor_utility" }

bevy = { workspace = true, default-features = true, features = ["bevy_asset"], optional = true }
ulid = { workspace = true }

atomic_refcell = "0.1"
serde          = "1"

[features]
bevy    = ["dep:bevy", "dep:yendor_bevy_utils"]
default = []
