[package]
authors    = ["Jacob LeCoq (BigBanana) <lecoqjacob@gmail.com>"]
edition    = "2021"
license    = "MIT OR Apache-2.0"
name       = "yendor_bevy_asset"
repository = "https://github.com/YendorEngine/yendor"
version    = "0.1.0"

[features]
load_progress = []

[dependencies]
yendor_bevy_asset_macros = { path = "./macros" }

yendor_bevy_utils = { path = "../yendor_bevy_utils" }
yendor_lib        = { path = "../../", features = ["bevy"] }
yendor_type_ulid  = { path = "../yendor_type_ulid" }
yendor_utility    = { path = "../yendor_utility" }

bevy       = { workspace = true, features = ["bevy_asset"] }
bevy_egui  = { version = "0.18.0", optional = true }
serde      = { version = "1.0.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid       = "1"

[dev-dependencies.bevy]
default-features = false
features         = ["x11", "bevy_winit", "bevy_asset"]
version          = "0.9"
