[package]
authors    = ["Jacob LeCoq (BigBanana) <lecoqjacob@gmail.com>"]
edition    = "2021"
license    = "MIT OR Apache-2.0"
name       = "yendor_has_load_progress"
repository = "https://github.com/YendorEngine/yendor"
version    = "0.1.0"

[dependencies]
bevy      = { workspace = true, features = ["bevy_asset"], version = "0.9" }
bevy_egui = { version = "0.20.3", optional = true }
macros    = { package = "yendor_has_load_progress_macros", path = "./macros" }
